--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NFT Raffle Platform</title>
+    <title>NFT Raffle</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
         <button id="raffleButton" style="display: none;">Create Raffle</button>
         <button id="shareButton" style="display: none;">Share Raffle Link</button>
 
-        <div id="raffleForm" style="display: none;">
+        <div id="raffleForm">
             <h2>Create Raffle</h2>
             <div id="nftList"></div>
             <input type="number" id="ticketPrice" placeholder="Ticket Price (in SOL)" />
@@ -27,16 +27,6 @@
         <p id="raffleStatus"></p>
         <div id="activeRaffles"></div>
         <div id="pastRaffles"></div>
-
-        <div id="instructions">
-            <h2>How to Use the Platform</h2>
-            <p>1. Click on "Connect Wallet" to connect your Phantom wallet.</p>
-            <p>2. Select an NFT from your wallet to create a raffle.</p>
-            <p>3. Enter the ticket price and set the raffle end time.</p>
-            <p>4. Click "Create Raffle" to start the raffle.</p>
-            <p>5. Share the raffle link using the "Share Raffle Link" button.</p>
-            <p>All transaction fees of 0.005 SOL will be stored in our wallet: <strong>78UVfn2ptcByR1jRr7XG9rJD4wVcWuLbZ1SegQy4KAac</strong></p>
-        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -68,23 +58,28 @@
         async function fetchNfts() {
             document.getElementById('raffleStatus').innerText = 'Loading NFTs...';
             try {
-                // Replace with your method to fetch NFTs
                 const response = await axios.get(`YOUR_API_ENDPOINT?wallet=${walletAddress}`);
-                nfts = response.data;
+                
+                if (response.status === 200 && Array.isArray(response.data)) {
+                    nfts = response.data;
 
-                const nftList = document.getElementById('nftList');
-                nftList.innerHTML = '';
-                nfts.forEach((nft) => {
-                    const nftItem = document.createElement('div');
-                    nftItem.className = 'nftItem';
-                    nftItem.innerText = nft.name; // Ensure your API provides this
-                    nftItem.onclick = () => selectNft(nftItem, nft);
-                    nftList.appendChild(nftItem);
-                });
-                document.getElementById('raffleForm').style.display = 'flex';
+                    const nftList = document.getElementById('nftList');
+                    nftList.innerHTML = '';
+                    nfts.forEach((nft) => {
+                        const nftItem = document.createElement('div');
+                        nftItem.className = 'nftItem';
+                        nftItem.innerText = nft.name; // Ensure your API provides this
+                        nftItem.onclick = () => selectNft(nftItem, nft);
+                        nftList.appendChild(nftItem);
+                    });
+                    document.getElementById('raffleForm').style.display = 'flex';
+                } else {
+                    throw new Error('No NFTs found or invalid response format.');
+                }
             } catch (error) {
                 console.error('Error fetching NFTs:', error);
-                alert('Failed to fetch NFTs. Please try again.');
+                document.getElementById('raffleStatus').innerText = 'Failed to fetch NFTs. Please check your wallet and try again.';
+                alert('Failed to fetch NFTs. Please check your wallet and try again.');
             } finally {
                 document.getElementById('raffleStatus').innerText = '';
             }
@@ -108,17 +103,22 @@
             }
 
             try {
-                // Simulate raffle creation without API
-                console.log('Creating raffle for:', {
-                    walletAddress,
+                const raffleData = {
+                    walletAddress: walletAddress,
                     nftAddress: selectedNft.address,
-                    ticketPrice,
-                    endTime
-                });
+                    ticketPrice: ticketPrice,
+                    endTime: endTime
+                };
 
-                document.getElementById('raffleStatus').innerText = `Raffle created for NFT: ${selectedNft.name} with ticket price: ${ticketPrice} SOL.`;
-                startCountdown(endTime);
-                await fetchActiveRaffles(); // Update active raffles display
+                const response = await axios.post('YOUR_BACKEND_API_ENDPOINT/create-raffle', raffleData);
+                
+                if (response.data.success) {
+                    document.getElementById('raffleStatus').innerText = `Raffle created for NFT: ${selectedNft.name} with ticket price: ${ticketPrice} SOL.`;
+                    startCountdown(endTime); // Start the countdown
+                    await fetchActiveRaffles();
+                } else {
+                    throw new Error(response.data.message);
+                }
             } catch (error) {
                 console.error('Error creating raffle:', error);
                 alert('Failed to create raffle. Please try again.');
@@ -135,6 +135,7 @@
                     clearInterval(countdownInterval);
                     document.getElementById('timer').innerText = 'Raffle has ended!';
                     document.getElementById('raffleStatus').innerText = `Raffle for ${selectedNft.name} has ended.`;
+                    document.getElementById('createRaffleButton').disabled = true; 
                     return;
                 }
 
@@ -147,18 +148,49 @@
         }
 
         async function fetchActiveRaffles() {
-            // Fetch active raffles logic here
+            const activeRafflesDiv = document.getElementById('activeRaffles');
+            activeRafflesDiv.innerHTML = '<h3>Active Raffles</h3>';
+            const response = await axios.get('YOUR_BACKEND_API_ENDPOINT/active-raffles');
+            response.data.forEach(raffle => {
+                const raffleItem = document.createElement('div');
+                raffleItem.className = 'raffleItem';
+                raffleItem.innerText = `NFT: ${raffle.nftName}, Ends: ${new Date(raffle.endTime).toLocaleString()}`;
+                activeRafflesDiv.appendChild(raffleItem);
+            });
         }
 
         async function fetchPastRaffles() {
-            // Fetch past raffles logic here
+            const pastRafflesDiv = document.getElementById('pastRaffles');
+            pastRafflesDiv.innerHTML = '<h3>Past Raffles</h3>';
+            const response = await axios.get('YOUR_BACKEND_API_ENDPOINT/past-raffles');
+            response.data.forEach(raffle => {
+                const raffleItem = document.createElement('div');
+                raffleItem.className = 'raffleItem';
+                raffleItem.innerText = `NFT: ${raffle.nftName}, Ended: ${new Date(raffle.endTime).toLocaleString()}`;
+                pastRafflesDiv.appendChild(raffleItem);
+            });
         }
 
         document.getElementById('connectWalletButton').onclick = connectWallet;
         document.getElementById('createRaffleButton').onclick = createRaffle;
-        document.getElementById('raffleButton').onclick = () => {
-            document.getElementById('raffleForm').style.display = 'flex';
-        };
+
+        window.onload = () => {
+            if (window.solana && window.solana.isPhantom) {
+                window.solana.connect({ onlyIfTrusted: true })
+                .then(({ publicKey }) => {
+                    walletAddress = publicKey.toString();
+                    document.getElementById('walletAddress').innerText = `Wallet Address: ${walletAddress}`;
+                    document.getElementById('raffleButton').style.display = 'block';
+                    document.getElementById('shareButton').style.display = 'block';
+                    fetchNfts();
+                    fetchActiveRaffles();
+                    fetchPastRaffles();
+                })
+                .catch((err) => console.error('Connection error:', err));
+            } else {
+                alert("Please install Phantom Wallet!");
+            }
+        }
     </script>
 </body>
 </html>
