--- a/index.html
+++ b/index.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFT Raffle Platform</title>
     <link rel="stylesheet" href="main.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: black;
+            color: white;
+            text-align: center;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+        }
+
+        h1, h2 {
+            color: gold;
+        }
+
+        button {
+            background-color: gold;
+            color: black;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            margin: 10px;
+        }
+
+        .info-box, .status-message {
+            background-color: #333;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 10px;
+        }
+
+        .nftItem, .raffleItem {
+            padding: 10px;
+            border: 1px solid gold;
+            margin: 10px;
+            cursor: pointer;
+        }
+
+        .nftItem.selected, .raffleItem:hover {
+            background-color: gold;
+            color: black;
+        }
+    </style>
 </head>
+
 <body>
     <div class="container">
         <h1>NFT Raffle Platform</h1>
@@ -93,7 +141,7 @@
                         nftItem.onclick = () => selectNft(nftItem, nft);
                         nftList.appendChild(nftItem);
                     });
-                    document.getElementById('raffleForm').style.display = 'flex';
+                    document.getElementById('raffleForm').style.display = 'block';
                 } else {
                     throw new Error('No NFTs found or invalid response format.');
                 }
@@ -214,4 +262,5 @@
         document.getElementById('viewRafflesButton').onclick = fetchActiveRaffles;
     </script>
 </body>
+
 </html>
